--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
-    "Email": "zdgzcfsfs",
+    "GrowID": "zurnaabot1",
+    "Password": "musti0012.",
+    "Email": "simitsusami35",
     "Domain": "@gmail.com",
     "Port": 17198
 }
